changes to apicall

--- a/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
+++ b/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
@@ -2,8 +2,20 @@
     ViewData["Title"] = "Home Page";
 }
 
+@model Network
+
+<link rel="stylesheet" type="text/css" href="~/css/site.css"/>
+<head class="main">
+    <style>
+        body {
+            background-image: url(https://grist.org/wp-content/uploads/2020/03/gettyimages-1179212574-e1584114897219.jpg)
+            
+        }
+    </style>
+</head>
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to CityBikes Finder</h1>
+    <p>Please select a state from the list to find a CityBikes location near you!</p>
 </div>
 
