--- a/FinalProjectTC/FinalProjectTC/Views/Network/Index.cshtml
+++ b/FinalProjectTC/FinalProjectTC/Views/Network/Index.cshtml
@@ -10,15 +10,17 @@
 <body>
     <div class="grid-container">
         @foreach (var item in Model)
+        {
+            @if (item.Location.Country == "US")
             {
-                if (item == "US")
-                {
                 <div class="flex-box">
                     <h1 class="text">@item.Name</h1>
                     <h2 class="text">@item.Location</h2>
                     <h2 class="text">@item.Ebikes</h2>
                 </div>
-                }
             }
+        }
     </div>
+
+    <a href="/Home/Index">Go to Home</a>
 </body>
