--- a/FinalProjectTC/FinalProjectTC/Views/Network/Index.cshtml
+++ b/FinalProjectTC/FinalProjectTC/Views/Network/Index.cshtml
@@ -16,7 +16,14 @@
                 <div class="flex-box">
                     <h1 class="text">@item.Name</h1>
                     <h2 class="text">@item.Location</h2>
-                    <h2 class="text">@item.Ebikes</h2>
+                    @if (item.Ebikes == true)
+                    {
+                    <h2>There are E-Bikes available at this location!</h2>
+                    }
+                     else
+                     {
+                    <h2>Sorry, there are no E-Bikes available at this location.</h2>
+                     }
                 </div>
             }
         }
