--- a/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
+++ b/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
@@ -17,8 +17,8 @@
 </head>
 
 <div class="text-center">
-    <h1 class="display-4" style="color: white">Welcome to CityBikes Finder</h1>
-    <h3 class="display-4" style="color: white">Here you can find any CityBikes provider in the world!</h3>
+    <h1 class="display-4" style="color: red">Welcome to CityBikes Finder</h1>
+    <h3 class="display-4" style="color: grey">Here you can find any CityBikes provider in the world!</h3>
     <p style="color: white">Please select a country from the list to find a CityBikes location near you</p>
 </div>
 
