--- a/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
+++ b/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
@@ -9,9 +9,10 @@
     <style>
         body {
             background-image: url(https://grist.org/wp-content/uploads/2020/03/gettyimages-1179212574-e1584114897219.jpg);
-            background-size: cover; /* This scales the image to cover the entire element */
-            background-position: center; /* This positions the image in the center */
-            background-repeat: no-repeat; /* Prevents the image from repeating */
+            background-size: cover; 
+            background-position: center; 
+            background-repeat: no-repeat; 
+            height: 100vh;
         }
     </style>
 </head>
