--- a/FinalProjectTC/FinalProjectTC/Views/Network/Index.cshtml
+++ b/FinalProjectTC/FinalProjectTC/Views/Network/Index.cshtml
@@ -9,7 +9,12 @@
 <head>
     <style>
         body {
-            background-image: url(https://c8.alamy.com/comp/2BX43PA/blank-outline-map-of-united-states-of-america-simplified-vector-map-made-of-thick-black-outline-on-white-background-2BX43PA.jpg);
+            background-image: url(https://static.vecteezy.com/system/resources/previews/006/580/598/original/silhouette-map-of-united-states-of-america-on-black-background-vector.jpg);
+            background-size: auto;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            height: 100vh;
         }
     </style>
 </head>
@@ -24,11 +29,11 @@
                     <h2 class="text" style="color: navy">@item.Location.City</h2>
                     @if (item.Ebikes == true)
                         {
-                    <h2>There are E-Bikes available at this location!</h2>
+                    <h2 style="color: white">There are E-Bikes available at this location!</h2>
                         }
                      else
                         {
-                    <h2>Sorry, there are no E-Bikes available at this location.</h2>
+                    <h2 style="color:white">Sorry, there are no E-Bikes available at this location.</h2>
                      }
                 </div>
             }
