--- a/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
+++ b/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
@@ -11,8 +11,11 @@
             background-image: url(https://grist.org/wp-content/uploads/2020/03/gettyimages-1179212574-e1584114897219.jpg);
             background-size: cover; 
             background-position: center; 
-            background-repeat: no-repeat; 
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             height: 100vh;
+            display: flex;
+            font-family: inria-serif;
         }
     </style>
 </head>
@@ -32,7 +35,7 @@
                 <option value="Italy">Italy</option>
             </select>
         </div>
-    <button type="submit">Submit</button>
+    <button type="submit" style="display: inline-block">Submit</button>
     }
 
 
