--- a/FinalProjectTC/FinalProjectTC/Views/Network/Index.cshtml
+++ b/FinalProjectTC/FinalProjectTC/Views/Network/Index.cshtml
@@ -10,7 +10,7 @@
     <style>
         body {
             background-image: url(https://static.vecteezy.com/system/resources/previews/006/580/598/original/silhouette-map-of-united-states-of-america-on-black-background-vector.jpg);
-            background-size: auto;
+            background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
