--- a/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
+++ b/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
@@ -19,10 +19,10 @@
         }
     </style>
 </head>
-
+<body>
 <div class="text-center">
-    <h1 class="display-4" style="color: red">Welcome to CityBikes Finder</h1>
-    <h3 class="display-4" style="color: grey">Here you can find any CityBikes provider in the world!</h3>
+    <h1 class="display-4" style="color: darkred">Welcome to CityBikes Finder</h1>
+    <h3 class="display-4" style="font-size: x-large">Here you can find any CityBikes provider in the world!</h3>
     <p style="color: green">Please select a country from the list to find a CityBikes location near you</p>
 </div>
 
@@ -37,5 +37,6 @@
         </div>
     <button type="submit" style="text-align-last: center">Submit</button>
     }
+</body>
 
 
