--- a/FinalProjectTC/FinalProjectTC/Views/Network/Index.cshtml
+++ b/FinalProjectTC/FinalProjectTC/Views/Network/Index.cshtml
@@ -17,6 +17,7 @@
             height: 100vh;
             display: flex;
             font-family: cursive;
+            font-size: small;
         }
     </style>
 </head>
@@ -27,11 +28,11 @@
             @if (item.Location.Country == "US")
             {
                 <div class="flex-box" style="border: double">
-                    <h1 class="text" style="color: red">@item.Name</h1>
+                    <h1 class="text" style="color: darkred">@item.Name</h1>
                     <h2 class="text" style="color: white">@item.Location.City</h2>
                     @if (item.Ebikes == true)
                         {
-                    <h2 style="color: blue">There are E-Bikes available at this location!</h2>
+                    <h2 style="color: darkorange">There are E-Bikes available at this location!</h2>
                         }
                      else
                         {
