--- a/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
+++ b/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
@@ -17,6 +17,10 @@
             display: flex;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
+        #button {
+            color: white;
+            background-color: black;
+        }
     </style>
 </head>
 <body>
@@ -35,7 +39,7 @@
                 <option value="Italy">Italy</option>
             </select>
         </div>
-    <button type="submit" style="text-align-last: center">Submit</button>
+    <button type="submit" style="text-align-last: center" id="button">Submit</button>
     }
 </body>
 
