--- a/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
+++ b/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
@@ -21,6 +21,7 @@
             color: white;
             background-color: black;
         }
+
     </style>
 </head>
 <body>
@@ -38,8 +39,8 @@
                 <option value="United States">United States</option>
                 <option value="Italy">Italy</option>
             </select>
+            <button type="submit" style="margin-left: 20px" id="button">Submit</button>
         </div>
-    <button type="submit" style="text-align-last: center" id="button">Submit</button>
     }
 </body>
 
