--- a/FinalProjectTC/FinalProjectTC/Views/Network/Italy.cshtml
+++ b/FinalProjectTC/FinalProjectTC/Views/Network/Italy.cshtml
@@ -15,7 +15,7 @@
             background-attachment: fixed;
             height: 100vh;
             display: flex;
-            font-family: cursive;
+            font-family: sans-serif;
             font-size: small;
         }
     </style>
