--- a/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
+++ b/FinalProjectTC/FinalProjectTC/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
             display: flex;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
-        #button {
+        #button, #country {
             color: white;
             background-color: black;
         }
@@ -35,7 +35,8 @@
     {
         <div style="text-align-last: center">
             <label for="country">Choose a Country:</label>
-            <select id="country" name="country">
+            <br />
+            <select id="country" name="country" value="">
                 <option value="United States">United States</option>
                 <option value="Italy">Italy</option>
             </select>
