--- a/FinalProjectTC/FinalProjectTC/Views/Shared/_Layout.cshtml
+++ b/FinalProjectTC/FinalProjectTC/Views/Shared/_Layout.cshtml
@@ -36,8 +36,8 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
+    <footer class="border-top footer text-muted" style="position: fixed">
+        <div class="container" style="position: fixed">
             &copy; 2023 - FinalProjectTC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
